deployments/apim46-safe-clone/k8s/06-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: apim46-lab-mgmt
  namespace: apim46-lab
spec:
  type: ClusterIP
  selector:
    app: apim46-lab
  ports:
    - name: https-mgmt
      port: 9453
      targetPort: 9453
---
apiVersion: v1
kind: Service
metadata:
  name: apim46-lab-gateway
  namespace: apim46-lab
spec:
  type: ClusterIP
  selector:
    app: apim46-lab
  ports:
    - name: https-gateway
      port: 8253
      targetPort: 8253
    - name: http-gateway
      port: 8290
      targetPort: 8290
